--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "abobrov",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^9.6.1",
     "css-loader": "^3.1.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
