--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "autoprefixer": "^9.6.1",
     "css-loader": "^3.1.0",
     "cssnano": "^4.1.10",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
