--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.2",
+    "fs-extra": "^8.1.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-pug-plugin": "^2.0.0",
     "mini-css-extract-plugin": "^0.8.0",
