--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.5.5",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^3.1.0",
     "cssnano": "^4.1.10",
     "eslint": "^5.16.0",
