--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.1.0",
     "cssnano": "^4.1.10",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.2",
+    "file-loader": "^4.1.0",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-pug-plugin": "^2.0.0",
