--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "prototyping ideas",
   "private": true,
   "scripts": {
-    "build": "NODE_ENV=production webpack --config webpack.config.js --mode production"
+    "build": "NODE_ENV=production webpack --config webpack.config.js --mode production",
+    "dev": "NODE_ENV=development webpack-dev-server --open --mode development"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,6 @@
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.1.0",
     "cssnano": "^4.1.10",
     "eslint": "^5.16.0",
@@ -37,7 +37,9 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6"
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "lodash": "^4.17.15"
