--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "lodash": "^4.17.15"
