--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "hello",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "prototyping ideas",
   "private": true,
   "scripts": {
-    "build": "NODE_ENV=production webpack --config webpack.config.js --mode production",
+    "test": "jest",
+    "build": "jest && NODE_ENV=production webpack --config webpack.config.js --mode production",
     "dev": "NODE_ENV=development webpack-dev-server --open --mode development"
   },
   "repository": {
@@ -29,6 +30,7 @@
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-pug-plugin": "^2.0.0",
+    "jest": "^24.8.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
@@ -41,6 +43,8 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@types/jest": "^24.0.17",
+    "babel-jest": "^24.8.0",
     "lodash": "^4.17.15"
   }
 }
