--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "hello",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "prototyping ideas",
   "private": true,
   "scripts": {
     "test": "jest",
-    "build": "jest && NODE_ENV=production webpack --config webpack.config.js --mode production",
+    "lint": "eslint src/**/*.js",
+    "build": "eslint src/**/*.js && jest && NODE_ENV=production webpack --config webpack.config.js --mode production",
     "dev": "NODE_ENV=development webpack-dev-server --open --mode development"
   },
   "repository": {
