--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "gsap": "^2.1.3",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "scrollmagic": "^2.0.7"
   }
 }
