--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.1.0",
     "cssnano": "^4.1.10",
     "eslint": "^5.16.0",
